Obtener foto de perfil

--- a/pages/mappy_board/home.html
+++ b/pages/mappy_board/home.html
@@ -24,7 +24,8 @@
 			<!-- SideBar User info -->
 			<div class="full-box dashboard-sideBar-UserInfo">
 				<figure class="full-box">
-					<img src="{% static 'mappy_board/assets/img/user.png' %}" alt="UserIcon">
+					<img src="{% static 'mappy_board/assets/img/user.png' %}" alt="UserIcon"
+                    id="user-image">
 					<figcaption class="email-me text-center text-titles"><!--Correo --></figcaption>
 				</figure>
 				<ul class="full-box list-unstyled text-center">
