--- a/pages/mappy_board/home.html
+++ b/pages/mappy_board/home.html
@@ -1379,6 +1379,7 @@
 	<script src="{% static 'js/userdao.js' %}"></script>
 	<script src="{% static 'js/packagedao.js' %}"></script>
 	<script src="{% static 'js/collectionorderdao.js' %}"></script>
+	<script src="{% static 'js/ordermanager.js' %}"></script>
 	<script src="{% static 'js/server_connections.js' %}"></script>
 	<!----------------------------INNIT------------------------------->
 
