--- a/pages/mappy_board/home.html
+++ b/pages/mappy_board/home.html
@@ -95,11 +95,6 @@
 						<i class="zmdi zmdi-search"></i>
 					</a>
 				</li>
-				<li>
-					<a href="#!" class="btn-modal-help">
-						<i class="zmdi zmdi-help-outline"></i>
-					</a>
-				</li>
 			</ul>
 
 		</nav>
@@ -356,13 +351,13 @@
 				<option value="ZW">Zimbabwe</option>
 </select>
 					<div class="label-create">Ciudad</div>
-					<input class="boxes-create" type="text">
+					<input class="boxes-create" type="text" id="create_c_city">
 					<div class="label-create">Dirección general</div>
-					<input class="boxes-create" type="text">
+					<input class="boxes-create" type="text" id="create_c_line1">
 					<div class="label-create">Dirección específica</div>
-					<input class="boxes-create" type="text">
+					<input class="boxes-create" type="text" id="create_c_line2">
 					<div class="label-create">Código postal</div>
-					<input class="boxes-create" type="text">
+					<input class="boxes-create" type="text" id="create_c_zipCode">
 				</div>
 				<div class="more-modal c" onclick="newForm('c')"><i class="zmdi zmdi-plus"></i></div>
 			</div>
@@ -616,23 +611,20 @@
 				<option value="ZW">Zimbabwe</option>
 </select>
 					<div class="label-create">Ciudad</div>
-					<input class="boxes-create" type="text">
+					<input class="boxes-create" type="text" id="create_d_city">
 					<div class="label-create">Dirección general</div>
-					<input class="boxes-create" type="text">
+					<input class="boxes-create" type="text" id="create_d_line1">
 					<div class="label-create">Dirección específica</div>
-					<input class="boxes-create" type="text">
+					<input class="boxes-create" type="text" id="create_d_line2">
 					<div class="label-create">Código postal</div>
-					<input class="boxes-create" type="text">
+					<input class="boxes-create" type="text" id="create_d_zipCode">
 					<div class="label-create">Descripción</div>
-					<input class="boxes-create" type="text">
+					<input class="boxes-create" type="text" id="create_d_description">
 				</div>
 				<div class="more-modal d" onclick="newForm('d')"><i class="zmdi zmdi-plus"></i></div>
 			</div>
 		</div>
-
-		<div class="carousel-create">
-			<div class="scroll-create">
-				<div class="package-create-container">
+		<div class="create-container">
 				<div class="title-section">
 				Datos del paquete<br>
 				<i class="zmdi zmdi-map"></i>
@@ -640,43 +632,47 @@
 				<div class="content-create">
 				<div class="packageNew">
 					<div class="label-create">Descripción</div>
-					<input class="boxes-create" type="text">
+					<input class="boxes-create" type="text" id="create_p_description">
 					<div class="label-create">Peso en kg</div>
-					<input class="boxes-create" type="text">
-					<div class="label-create">Nombre del destinatario</div>
-					<input class="boxes-create" type="text">
-					<div class="label-create">Apellido del destinatario</div>
-					<input class="boxes-create" type="text">
+					<input class="boxes-create" type="text" id="create_p_weight">
 				</div>
+					<div class="label-create">Nombre del destinatario</div>
+					<input class="boxes-create" type="text" id="create_p_name">
+					<div class="label-create">Apellido del destinatario</div>
+					<input class="boxes-create" type="text" id="create_p_surname">
+
+				<div class="more-modal d" onclick="savePackageAndNewCreator()"><i class="zmdi zmdi-plus"></i></div>
 			</div>
-			</div>
-				<div class="cards-create">
+		</div>
+		<div id="mapMini" class="mapMini d-flex justify-content-center"></div>
+		<div class="carousel-create">
+			<div class="scroll-create">
+				<!------<div class="cards-create">
 					<div class="package-create-container">
 						<div class="title-section">
 							Datos del paquete<br>
-						<i class="zmdi zmdi-map"></i>
+						<i class="zmdi zmdi-dropbox"></i>
 						</div>
 						<div class="content-create">
 							<div class="packageNew">
 								<div class="label-create">Descripción</div>
-								<input class="boxes-create" type="text">
+								<div class="label-create b"><b>Perro</b></div>
 								<div class="label-create">Peso en kg</div>
-								<input class="boxes-create" type="text">
+								<div class="label-create b"><b>10</b></div>
 							</div>
 							<div class="more-modal red" onclick="deleteNewPackage()" style="display: block">
 								<i class="zmdi zmdi-delete"></i></div>
 						</div>
 					</div>
-				</div>
-				<div class="more-container">
-					<div class="addPackage" onclick=""><i class="zmdi zmdi-plus"></i></div>
-				</div>
+				</div>--->
 			</div>
 		</div>
 
 
-		<div id="mapMini" class="mapMini d-flex justify-content-center"
-			 style="display: none">
+
+
+		<div class="check">
+			<i class="zmdi zmdi-check"></i></div>
 		</div>
 	</div>
 
@@ -702,11 +698,12 @@
 	<div id="mapMain" class="mapMain d-flex justify-content-center">
 
 	</div>
-
+</div>
 
 
 
 	<!-- Without collection orders dialog-->
+
 
 	<div class="modal fade" tabindex="-1" role="dialog" id="Dialog-Help">
 	  	<div class="modal-dialog" role="document">
@@ -1370,16 +1367,17 @@
 	<script src="{% static 'js/collectionorderdao.js' %}"></script>
 	<script src="{% static 'js/ordermanager.js' %}"></script>
 	<script src="{% static 'js/server_connections.js' %}"></script>
+
 	<!----------------------------INNIT------------------------------->
 
 	<script src="{% static 'mappy_board/js/main.js' %}"></script>
-
 	<!----------------------------Modal------------------------------->
 
 	<script src="{% static 'js/modal.js' %}"></script>
 
 	<!----------------------------Actions------------------------------->
 
+	<script src="{% static 'js/add_collection_order.js' %}"></script>
 	<script src="{% static 'mappy_board/js/map.js' %}"></script>
 	<script src="{% static 'js/requests.js' %}"></script>
 	<script src="{% static 'mappy_board/js/queries.js' %}"></script>
