Corregido error de paquetes duplicados

--- a/pages/mappy_board/home.html
+++ b/pages/mappy_board/home.html
@@ -1337,7 +1337,7 @@
 			<div class="more-modal" onclick="savePackageAndNew()"><i class="zmdi zmdi-plus"></i></div>
 			<div class="more-modal red" onclick="deleteNewPackage()"><i class="zmdi zmdi-delete"></i></div>
 		</div>
-			<button type="button" class=" btn btn-primary btn-raised" onclick="sendModal()">
+			<button type="button" class=" btn btn-primary btn-raised" onclick="sendOrderForm('modal')">
 										Enviar
 			</button>
 	</div>
