Reseteo de formularios

--- a/pages/mappy_board/home.html
+++ b/pages/mappy_board/home.html
@@ -102,8 +102,8 @@
 	<!----------------------------Make a collection order form------------------------------->
 
 	<div class="makeACollectionOrder">
-
-		<div class="create-container">
+		<div class="create-form">
+			<div class="create-container">
 			<div class="title-section">
 				Dirección de recolección<br>
 				<i class="zmdi zmdi-map"></i>
@@ -363,7 +363,7 @@
 			</div>
 
 		</div>
-		<div class="create-container">
+			<div class="create-container">
 			<div class="title-section">
 				Dirección de envío<br>
 				<i class="zmdi zmdi-pin"></i>
@@ -624,7 +624,8 @@
 				<div class="more-modal d" onclick="newForm('d')"><i class="zmdi zmdi-plus"></i></div>
 			</div>
 		</div>
-		<div class="create-container">
+		</div>
+		<div class="create-container OfPackage">
 				<div class="title-section">
 				Datos del paquete<br>
 				<i class="zmdi zmdi-dropbox"></i>
@@ -644,6 +645,7 @@
 				<div class="more-modal e" onclick="savePackageAndNewCreator()"><i class="zmdi zmdi-plus"></i></div>
 			</div>
 		</div>
+
 		<div id="mapMini" class="mapMini d-flex justify-content-center"></div>
 		<div class="carousel-create">
 			<div class="scroll-create">
