Añadido requisito caracteres especiales a las contraseñas

--- a/pages/forms/signup.html
+++ b/pages/forms/signup.html
@@ -46,7 +46,7 @@
 								</div>
 								<div class="form-group">
 									<label for="birthDate">Fecha de nacimiento</label>
-									<input id="birthDate" type="date" class="form-control" name="birthDate" autofocus>
+									<input id="birthDate" type="date" class="form-control" name="birthDate" min="1960-01-01" max="2008-01-01" autofocus>
 									<div class="invalid-feedback" id="invalid-birthdate">
 										Tienes que ser mayor de edad
 									</div>
@@ -66,7 +66,7 @@
 									<label for="password">Contraseña</label>
 									<input id="password" type="password" class="form-control" name="password" required data-eye>
 									<div class="invalid-feedback" id="invalid-password">
-										Contraseña inválida. Debe tener por lo menos 8 caracteres, con al menos una mayúscula, una minúscula y un número
+										Contraseña inválida. Debe tener por lo menos 8 caracteres, con al menos una mayúscula, una minúscula, un número y un caracter especial.
 									</div>
 								</div>
 
