--- a/pages/mappy_board/home.html
+++ b/pages/mappy_board/home.html
@@ -25,12 +25,12 @@
 			<div class="full-box dashboard-sideBar-UserInfo">
 				<figure class="full-box">
 					<img src="{% static 'mappy_board/assets/img/user.png' %}" alt="UserIcon"
-                    id="user-image">
+                    id="user-image" class="user-image">
 					<figcaption class="email-me text-center text-titles"><!--Correo --></figcaption>
 				</figure>
 				<ul class="full-box list-unstyled text-center">
 					<li>
-						<a href="#!">
+						<a href="#!" class="settings-btn">
 							<i class="zmdi zmdi-settings"></i>
 						</a>
 					</li>
@@ -684,7 +684,101 @@
 			<section id="cd-timeline" class="collectionHistory cd-container" style="display: none">
 
 			</section>
+	</div>
+
+	<!----------------------------Settings------------------------------->
+
+	<div class="settings">
+		<div class="profile-card">
+			<div class="profile-card-image">
+				<div class="alpha-card-image"></div>
+
+			</div>
+			<div class="profile-image-stat">
+				<img src="{% static 'mappy_board/assets/img/user.png' %}" alt="UserIcon"
+                    id="profile-image-card" class="user-image">
+			</div>
+			<div class="profile-stats">
+				<div class="stat"></div>
+				<div class="stat">
+					<div class="title-stat">
+						Rolando Andrade
+					</div>
+					<div class="data-stat email-me">
+					</div>
+					<div class="icon-stat">
+						<i class="zmdi zmdi-account"></i>
+					</div>
+				</div>
+				<div class="stat">
+					<div class="title-stat collection-order-number">
+					</div>
+					<div class="data-stat">
+						Órdenes de recolección en curso
+					</div>
+					<div class="icon-stat">
+						<i class="zmdi zmdi-dropbox"></i>
+					</div>
+				</div>
+				<div class="stat">
+					<div class="title-stat collection-address-number">
+					</div>
+					<div class="data-stat">
+						Direcciones de recolección registradas
+					</div>
+					<div class="icon-stat">
+						<i class="zmdi zmdi-map"></i>
+					</div>
+				</div>
+				<div class="stat">
+					<div class="title-stat delivery-address-number">
+					</div>
+					<div class="data-stat">
+						Direcciones de envío registradas
+					</div>
+					<div class="icon-stat">
+						<i class="zmdi zmdi-pin"></i>
+					</div>
+				</div>
+			</div>
+
 		</div>
+		<div class="create-form">
+			<div class="create-container">
+			<div class="title-section">
+				Modificar datos de usuario<br>
+				<i class="zmdi zmdi-account"></i>
+			</div>
+			<div class="content-create">
+				<div class="label-create">Imagen de perfil</div>
+				<input type="file" accept="image/png, image/jpeg">
+				<div class="label-create">Primer nombre</div>
+				<input class="boxes-create" type="text" maxlength="35">
+				<div class="label-create">Segundo nombre</div>
+				<input class="boxes-create" type="text" maxlength="35">
+				<div class="label-create">Primer Apellido</div>
+				<input class="boxes-create" type="text" maxlength="35">
+				<div class="label-create">Segundo Apellido</div>
+				<input class="boxes-create" type="text" maxlength="35">
+				<div class="more-modal" onclick=""><i class="zmdi zmdi-edit"></i></div>
+			</div>
+
+		</div>
+			<div class="create-container">
+			<div class="title-section red">
+				Zona peligrosa<br>
+				<i class="zmdi zmdi-block"></i>
+			</div>
+			<div class="content-create">
+				<div class="expandible d">
+
+				</div>
+				<div class="more-modal redi" onclick="newForm('d')"><i class="zmdi zmdi-alert-triangle"></i></div>
+			</div>
+		</div>
+		</div>
+
+	</div>
 
 	</section>
 
