--- a/pages/mappy_board/home.html
+++ b/pages/mappy_board/home.html
@@ -701,8 +701,7 @@
 			<div class="profile-stats">
 				<div class="stat"></div>
 				<div class="stat">
-					<div class="title-stat">
-						Rolando Andrade
+					<div class="title-stat" id="username-stat">
 					</div>
 					<div class="data-stat email-me">
 					</div>
@@ -753,14 +752,14 @@
 				<div class="label-create">Imagen de perfil</div>
 				<input type="file" accept="image/png, image/jpeg">
 				<div class="label-create">Primer nombre</div>
-				<input class="boxes-create" type="text" maxlength="35">
+				<input class="boxes-create" type="text" maxlength="35" id="user_first_name">
 				<div class="label-create">Segundo nombre</div>
-				<input class="boxes-create" type="text" maxlength="35">
+				<input class="boxes-create" type="text" maxlength="35" id="user_second_name">
 				<div class="label-create">Primer Apellido</div>
-				<input class="boxes-create" type="text" maxlength="35">
+				<input class="boxes-create" type="text" maxlength="35" id="user_first_surname">
 				<div class="label-create">Segundo Apellido</div>
-				<input class="boxes-create" type="text" maxlength="35">
-				<div class="more-modal" onclick=""><i class="zmdi zmdi-edit"></i></div>
+				<input class="boxes-create" type="text" maxlength="35" id="user_second_surname">
+				<div class="more-modal" onclick="updateProfileData()"><i class="zmdi zmdi-edit"></i></div>
 			</div>
 
 		</div>
@@ -1401,6 +1400,7 @@
 	<script src="{% static 'js/collectionorderdao.js' %}"></script>
 	<script src="{% static 'js/ordermanager.js' %}"></script>
 	<script src="{% static 'js/server_connections.js' %}"></script>
+    <script src="{% static 'js/update_profile.js' %}"></script>
 
 	<!----------------------------INNIT------------------------------->
 
