--- a/pages/forms/signup.html
+++ b/pages/forms/signup.html
@@ -107,7 +107,7 @@
 	<script src="{% static 'js/Validator.js' %}"></script>
 	<script src="{% static 'js/my-login.js' %}"></script>
 	<script src="{% static 'js/requests.js' %}"></script>
-	<script src="{% static 'js/userdao.js' %}"></script>
+	<script src="{% static 'js/managers.js' %}"></script>
 	<script src="{% static 'js/signup.js' %}"></script>
 </body>
 </html>
