--- a/pages/forms/login.html
+++ b/pages/forms/login.html
@@ -69,7 +69,7 @@
 	<script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
 	<script src="{% static 'js/my-login.js' %}"></script>
 	<script src="{% static 'js/requests.js' %}"></script>
-	<script src="{% static 'js/userdao.js' %}"></script>
+    <script src="{% static 'js/managers.js' %}"></script>
 	<script src="{% static 'js/login.js' %}"></script>
 </body>
 </html>
