Limpieza de código

--- a/pages/mappy_board/home.html
+++ b/pages/mappy_board/home.html
@@ -763,18 +763,6 @@
 			</div>
 
 		</div>
-			<div class="create-container">
-			<div class="title-section red">
-				Zona peligrosa<br>
-				<i class="zmdi zmdi-block"></i>
-			</div>
-			<div class="content-create">
-				<div class="expandible d">
-
-				</div>
-				<div class="more-modal redi" onclick="newForm('d')"><i class="zmdi zmdi-alert-triangle"></i></div>
-			</div>
-		</div>
 		</div>
 
 	</div>
@@ -1391,15 +1379,11 @@
 
 	<script src="{% static 'mappy_board/js/dialogs.js' %}"></script>
 
-	<!----------------------------DAO------------------------------->
 
-	<script src="{% static 'js/collectionaddressdao.js' %}"></script>
-	<script src="{% static 'js/deliveryaddressdao.js' %}"></script>
-	<script src="{% static 'js/userdao.js' %}"></script>
-	<script src="{% static 'js/packagedao.js' %}"></script>
-	<script src="{% static 'js/collectionorderdao.js' %}"></script>
+    <script src="{% static 'js/managers.js' %}"></script>
 	<script src="{% static 'js/ordermanager.js' %}"></script>
 	<script src="{% static 'js/server_connections.js' %}"></script>
+
 
 
 	<!----------------------------INNIT------------------------------->
