--- a/pages/mappy_board/home.html
+++ b/pages/mappy_board/home.html
@@ -750,7 +750,10 @@
 			</div>
 			<div class="content-create">
 				<div class="label-create">Imagen de perfil</div>
-                <button id="upload_widget" class="cloudinary-button">Subir imagen</button>
+                <div class="profile-image-stat">
+				<img src="{% static 'mappy_board/assets/img/user.png' %}" alt="UserIcon"
+                    class="user-image update">
+			    </div>
 				<div class="label-create">Primer nombre</div>
 				<input class="boxes-create" type="text" maxlength="35" id="user_first_name">
 				<div class="label-create">Segundo nombre</div>
